Fixing card height on mobile view

--- a/src/components/Card/Style.module.scss
+++ b/src/components/Card/Style.module.scss
@@ -5,7 +5,8 @@
 .CardWrapper {
   border: 1px solid $darkGrey;
   box-shadow: 3px 4px 2px 2px #888888;
-  height: 475px;
+  height: fit-content;
+  min-height: 475px;
   width: 600px;
   padding-bottom: 30px;
   margin: 30px;
